--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "devDependencies": {
     "cypress": "^8.4.1",
+    "cypress-file-upload": "^5.0.8",
     "cypress-xpath": "^2.0.0"
   },
   "dependencies": {
